# DogClassifierHydra-Exp

./: README.md  pyproject.toml
configs/: train.yaml
configs/data/: catdog.yaml
configs/experiment/: catdog_ex.yaml
configs/model/: timm_classify.yaml
configs/trainer/: default.yaml
src/: infer.py  train.py
src/datamodules/: catdog_datamodule.py
src/models/: timm_classifier.py
src/utils/: logging_utils.py
